err.log
In file included from ./src/display.c:4:0:
./include/base.h:138:0: warning: "max" redefined
 #define max(a,b)    (((a) > (b)) ? (a) : (b))
 
In file included from c:\program files\git\mingw32\include\windows.h:42:0,
                 from ./include/base.h:16,
                 from ./src/display.c:4:
c:\program files\git\mingw32\include\windef.h:162:0: note: this is the location of the previous definition
 #define max(a,b) ((a)>(b)?(a):(b))
 
In file included from ./src/display.c:4:0:
./include/base.h:139:0: warning: "min" redefined
 #define min(a,b)    (((a) < (b)) ? (a) : (b))
 
In file included from c:\program files\git\mingw32\include\windows.h:42:0,
                 from ./include/base.h:16,
                 from ./src/display.c:4:
c:\program files\git\mingw32\include\windef.h:165:0: note: this is the location of the previous definition
 #define min(a,b) ((a)<(b)?(a):(b))
 
./src/display.c: In function 'start_display':
./src/display.c:142:2: warning: implicit declaration of function 'process_server_msg' [-Wimplicit-function-declaration]
  process_server_msg(req);
  ^~~~~~~~~~~~~~~~~~
./src/display.c: In function 'close_display':
./src/display.c:156:5: warning: implicit declaration of function 'close_fd' [-Wimplicit-function-declaration]
     close_fd(displays[i].req->fd);
     ^~~~~~~~
./src/display.c:160:2: warning: 'usleep' is deprecated [-Wdeprecated-declarations]
  usleep(50000);   //等待500ms 客户端结束
  ^~~~~~
In file included from ./include/base.h:7:0,
                 from ./src/display.c:4:
c:\program files\git\mingw32\include\unistd.h:100:29: note: declared here
 int __cdecl __MINGW_NOTHROW usleep( useconds_t )__MINGW_ATTRIB_DEPRECATED;
                             ^~~~~~
./src/display.c:162:2: warning: 'usleep' is deprecated [-Wdeprecated-declarations]
  usleep(50000);   //等待500ms 客户端结束
  ^~~~~~
In file included from ./include/base.h:7:0,
                 from ./src/display.c:4:
c:\program files\git\mingw32\include\unistd.h:100:29: note: declared here
 int __cdecl __MINGW_NOTHROW usleep( useconds_t )__MINGW_ATTRIB_DEPRECATED;
                             ^~~~~~
./src/display.c: In function 'send_control':
./src/display.c:190:2: warning: implicit declaration of function 'set_request_head' [-Wimplicit-function-declaration]
  set_request_head(control_display->req, cmd, data_len);
  ^~~~~~~~~~~~~~~~
./src/display.c:190:46: error: 'data_len' undeclared (first use in this function)
  set_request_head(control_display->req, cmd, data_len);
                                              ^~~~~~~~
./src/display.c:190:46: note: each undeclared identifier is reported only once for each function it appears in
./src/display.c:191:36: warning: pointer targets in assignment differ in signedness [-Wpointer-sign]
     control_display->req->data_buf = buf;
                                    ^
./src/display.c: In function 'event_loop':
./src/display.c:237:6: warning: implicit declaration of function 'switch_mode' [-Wimplicit-function-declaration]
      switch_mode(area_id);
      ^~~~~~~~~~~
./src/display.c:287:4: warning: implicit declaration of function 'stop_server' [-Wimplicit-function-declaration]
    stop_server();  //通过callback 返回给dll
    ^~~~~~~~~~~
At top level:
./src/display.c:119:13: warning: 'simulate_keyboard' defined but not used [-Wunused-function]
 static void simulate_keyboard()
             ^~~~~~~~~~~~~~~~~
./src/display.c:114:13: warning: 'simulate_mouse' defined but not used [-Wunused-function]
 static void simulate_mouse()
             ^~~~~~~~~~~~~~
make: *** [display.o] Error 1
